<resources>
    <string name="app_name">Clothing Application</string>
    <string name="Home">home</string>
    <string name="Categories">categories</string>
    <string name="Heart">Wish list</string>
    <string name="Cart">cart</string>
    <string name="Profile">profile</string>
    <string name="Inventory">Add to Inventory</string>
    <string name="Inquiries">Inquiries</string>
    <string name="Products">View All Products</string>
    <string name="Admin">Admin</string>

    <!--Home page String literals -->
    <string name="collection">View Collection</string>
    <string name="offers">Offers</string>
    <string name="best">Best Sellers</string>

    <!--Categories page String literals -->
    <string name="all">VIEW ALL</string>
    <string name="denims">DENIMS</string>
    <string name="dresses">DRESSES</string>
    <string name="linen">LINEN</string>
    <string name="shoes">SHOES</string>
    <string name="partyWear">PARTY WEAR</string>
    <string name="pants">PANTS</string>
    <string name="workWear">WORK WEAR</string>
    <string name="accessories">ACCESSORIES</string>
    <string name="tops">TOPS</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id">620621325135533</string>
    <string name="fb_login_protocol_scheme">fb620621325135533</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_passsword">Forgot Passsword?</string>
    <string name="not_registered_yet">Not Registered yet?</string>
    <string name="forgot_password_activity">FORGOT PASSWORD?</string>
    <string name="back"><![CDATA[<<BACK]]></string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="we_just_need_to_know_the_registered_email_that_was_used_when_you_registered_to_reset_your_password">We just need to know the registered email that was used when you registered to reset your password.</string>
    <string name="enter_your_current_email">Enter your current Email</string>
    <string name="enter_new_email_address">Enter your new email address.</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="btn_change">Change Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="send">SEND</string>
    <string name="change_email">Change Email</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="deactivate_profile">Deactivate Profile</string>
    <string name="remove">Remove</string>
    <string name="profilema">You can now manage your account in our clothing store. Click the button below and get started!</string>
    Inventory

    <!-- Adding an image -->
    <string name="upload">Upload</string>
    <string name="choose">Choose</string>
    <string name="show">Show Products</string>


    <!-- Saving the resources-->
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="cate">Category</string>
    <string name="quantity">Quantity</string>
    <string name="pSave">Save</string>

    <!--To choose from a selector -->
    <string name="add_cart">Add To Cart</string>


    <string name="contact">Contact Us</string>
    <string name="cancel">Cancel</string>
    <string name="lets_get_back_to_our_store">LETS GET BACK TO OUR STORE</string>
    <string name="my_cart">My Cart</string>
    <string-array name="category">
        <item>dresses </item>
        <item>tops </item>
        <item>work wear </item>
        <item>linen </item>
        <item>denims </item>
        <item>pants </item>
        <item>party wear </item>
        <item>shoes </item>
        <item>accessories </item>
    </string-array>
</resources>
