<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/offers"
    tools:context=".AdminActivity">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"

            >


            <Button
                android:id="@+id/to_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:background="@color/hlightPurple"
                android:text="@string/Inventory"
                android:textColor="@color/hWhite" />


            <Button
                android:id="@+id/to_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/hBlue"
                android:text="@string/Products"
                android:textColor="@color/hWhite" />

            <Button
                android:id="@+id/to_ContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/hdarkPurple"
                android:text="@string/Inquiries"
                android:textColor="@color/hWhite" />


        </LinearLayout>



</ScrollView>