<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AdminProductActivity">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"

                    >

                    <Button
                    android:id="@+id/btn_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose" />

                    <EditText
                        android:id="@+id/image_name"
                        android:hint="@string/choose"
                        android:layout_width="299dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="0dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                >
                    <Button
                        android:id="@+id/btn_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload"/>

                    <TextView
                        android:id="@+id/Show_uploads"
                        android:layout_width="184dp"
                        android:layout_height="29dp"
                        android:layout_marginStart="16dp"

                        android:text="@string/show" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/image_to_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_marginBottom="16dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/txt_color"
                        android:text="@string/color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <EditText
                        android:id="@+id/color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/txt_cate"
                        android:text="@string/cate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <EditText
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/txt_quantity"
                        android:text="@string/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <EditText
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                >

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSave"
                        android:text="@string/pSave" />
                </LinearLayout>
            </LinearLayout>

</ScrollView>