<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_shadow_start_color"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="SIGN IN"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="309dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="307dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="292dp"
            android:layout_height="59dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textColor="@android:color/black" />


        <Button
            android:id="@+id/btn_admin"
            android:layout_width="218dp"
            android:layout_height="29dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="Admin"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/forgot_passsword"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/not_registered_yet"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>