<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/cardview_shadow_start_color"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="305dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:hint="@string/enter_email"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="299dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <!--LoginActivity Screen-->
        <Button
            android:id="@+id/reset_button"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="Already Registered?"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
